# mnist-knn-model

./: .gitignore  Cargo.toml
src/: main.rs
