[package]
name = "rust-classification-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
smartcore = {version = "0.2.0", features = ["serde"]}
idx_parser = "0.3.0"
bincode = "1.3.1"

